Add AUR packaging files for v1.0.0 release
- Added PKGBUILD for Arch Linux AUR
- Added setup.py and pyproject.toml for Python packaging
- Added MANIFEST.in for distribution files
- Added MIT LICENSE
- Updated .gitignore to track packaging files
- Cleaned up non-existent file references in packaging scripts

--- a/.gitignore
+++ b/.gitignore
@@ -105,11 +105,8 @@ setup.sh
 
 # Packaging files (not needed in repo)
 .gitattributes
-MANIFEST.in
-setup.py
-pyproject.toml
-PKGBUILD
-LICENSE
+
+# Note: MANIFEST.in, setup.py, pyproject.toml, PKGBUILD, LICENSE are now tracked for AUR
 
 # Old/redundant files
 requirements-deezer.txt
